--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Merry Christmas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript" src="script.js"></script>
-
 </head>
 
 <body>
@@ -21,7 +20,22 @@
         <div class="t3"></div>
         <div class="stem"></div>
         <div class="snow-ground"></div>
+        <div class="mistletoe"></div>
+        <div class="wreath"></div>
+        <div class="ball1"></div>
+        <div class="ball2"></div>
+        <div class="sock"></div>
+        <div class="santa"></div>
+        <div class="santa2"></div>
+        <div class="gift"></div>
+        <div class="gift2"></div>
+        <div class="gift3"></div>
+        <div class="snowman"></div>
+        <div class="reindeer"></div>
+        <div class="reindeer2"></div>
+        <h2 class="content__title no-select">
+            <span class="content__title-sub">Merry Christmas</span>
+        </h2>
     </div>
 </body>
-
 </html>
